# pure-compiler

./: .gitignore  README.md  cabal.project.local  pure.cabal
app/: Main.hs
app/Core/: ANF.hs  AsyncChecker.hs  Garbage.hs  Isolation.hs  Monomorphization.hs
app/Core/ANF/: Conversion.hs
app/Core/Closure/: Compiler.hs  Conversion.hs
app/Core/Closure/Conversion/: Free.hs  Type.hs
app/Core/Compiler/: CodeGen.hs  Compiler.hs  Modules.hs  Type.hs
app/Core/Compiler/CodeGen/: Generation.hs  IR.hs
app/Core/Compiler/Modules/: ADT.hs  Pattern.hs
app/Core/Compiler/Type/: Free.hs  Monad.hs
app/Core/Conversion/: Close.hs  Free.hs  Hoisting.hs
app/Core/Import/: Resolver.hs
app/Core/Parser/: AST.hs  Parser.hs
app/Core/Parser/AST/: Expression.hs  Literal.hs
app/Core/TypeChecking/: Substitution.hs  Type.hs  Unification.hs
app/Core/TypeChecking/Type/: AST.hs  Definition.hs  Methods.hs  Pretty.hs
std/: interop.pure  io.pure
std/classes/: monad.pure  pair.pure  show.pure
std/modules/: list.pure
tests/: example.pure  factorial.pure
